@@ -1,4 +1,0 @@
-# SMOLiX OPERATING SYSTEM DEVELOPMENT LOG
-
-## 2025/04/26
-The epoch of SMOLiX.
