@@ -355,11 +355,10 @@ version_msg         db 'Version alpha2', 0
 welcome_msg         db 'Welcome to ', 0x81, 0x82, 0x83, 0x84, 0x85, 0x86, ' Operating System', 0
 copyright_msg       db '(C) 2025 Krzysztof Krystian Jankowski', 0
 more_info_msg       db 'Type "h" for help. Read more at smol.p1x.in/smolix/', 0
-help_os_msg         db 'Legend: ">" system message, "+" message, "." return status, "@" user prompt', 0
+help_os_msg         db 'Legend: ',PROMPT_SYS_MSG,' system message, ',PROMPT_MSG,' message, ',PROMPT_STATUS,' return status, ',PROMPT_USR,' user prompt', 0
 help_cmds_msg       db 'Commands: "v" version, "r" reset, "d" debug', 0
 unknown_cmd_msg     db 'Unknown command', 0
 hex_ruler_msg       db '0123456789ABCDEF', 0
-
 glyph_00:
     db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
     db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
@@ -397,8 +396,8 @@ glyph_08:
     db 0x3c, 0xbd, 0x00, 0x55, 0x00, 0x00, 0x00, 0x00
 
 glyph_09:
-    db 0x00, 0x00, 0x18, 0x6c, 0xec, 0xf2, 0x7f, 0x1f
-    db 0x40, 0x6a, 0x7e, 0x36, 0x1c, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0x00, 0xff, 0xbd, 0xbd, 0xbd, 0x81
+    db 0x99, 0x99, 0xc3, 0xff, 0x00, 0x00, 0x00, 0x00
 
 glyph_0a:
     db 0x00, 0x00, 0x00, 0xfc, 0xfe, 0x8b, 0xff, 0xa1
@@ -417,8 +416,8 @@ glyph_0d:
     db 0x7f, 0x06, 0x04, 0x00, 0x00, 0x00, 0x00, 0x00
 
 glyph_0e:
-    db 0x00, 0x00, 0x3c, 0x7e, 0xff, 0xff, 0x7e, 0xbd
-    db 0xc3, 0xff, 0xff, 0xff, 0x7e, 0x3c, 0x00, 0x00
+    db 0x00, 0x00, 0x3c, 0x42, 0x81, 0x81, 0xc3, 0xbd
+    db 0xc3, 0xbd, 0xc3, 0xbd, 0x42, 0x3c, 0x00, 0x00
 
 glyph_0f:
     db 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
